Fix payment icons opacity - set to full visibility
Changed opacity from 0.7 to 1 so payment icons appear clear
instead of faded/washed out.

--- a/styles.css
+++ b/styles.css
@@ -842,11 +842,6 @@ p {
     width: 55px;
     height: 35px;
     border-radius: 3px;
-    opacity: 0.7;
-    transition: opacity var(--transition-fast);
-}
-
-.payment-icons svg:hover {
     opacity: 1;
 }
 
